# frame-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analysis.db  blog.md  blog.md.backup  docker-compose.yml  main.py  prompts.py  pyproject.toml
api/: __init__.py  models.py  routes.py
config/: langfuse_config.py
evals/: CHANGES.md  README.md  __init__.py  config.py  conftest.py
evals/scripts/: run_evals.py
evals/tests/: __init__.py  test_analysis.py
evals/utils/: __init__.py  validation.py
services/: analysis.py  database.py  llm.py  photo.py  tools.py
static/: index.html
utils/: __init__.py  helpers.py
