[project]
name = "frame-ai"
version = "0.1.0"
description = "AI-powered photography coach and analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.3.0",
    "anthropic>=0.40.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
    "google-genai>=1.36.0",
    "python-dotenv>=1.1.1",
    "types-requests>=2.32.4.20250913",
    "requests>=2.32.0"
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
